# SnakeAI

./: .gitignore  CMakeLists.txt  LICENSE  Main.cpp
Displays/: ConsoleDisplay.cpp  ConsoleDisplay.h
Engine/: Game.cpp  Game.h  IDisplay.h  IPlayer.h  State.cpp  State.h  Tile.cpp  Tile.h
Snakes/: RandomSnake.cpp  RandomSnake.h
Utils/: Keyboard.cpp  Keyboard.h
